--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,6 @@ jobs:
         key: go_mod-{{ checksum "go.mod" }}-{{ checksum "go.sum" }}
         paths:
         - /go/pkg/mod
-    - run: dockerize -timeout 60s -wait tcp://mysql:9092
-    - run: go test -v ./...
+    - run: dockerize -timeout 60s -wait tcp://localhost:9092
+    - run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic
+    - run: bash <(curl -s https://codecov.io/bash)
